--- a/ssfl/templates/admin/calendar.jinja2
+++ b/ssfl/templates/admin/calendar.jinja2
@@ -1,94 +1,65 @@
 <!DOCTYPE html>
+<!--
+     Route: '/admin/calendar' => manage_calendar
+     Template: calendar.jinja2
+     Form: manage_calendar_form.py
+     Processor: manage_calendar.py
+ -->
 {% extends 'base/layout.jinja2' %}
 
 {% block content %}
     <section class="container">
         <div class="">
-            <form action="{{ url_for('admin_bp.sst_admin_calendar') }}" method="post"  enctype="multipart/form-data">
-                <div class="input">
-                    {{ form.work_function.label }}
-                    {{ form.work_function() }}
-                    {% if form.work_function.errors %}
-                        <ul class="errors">
-                            {% for error in form.work_function.errors %}
-                                <li>{{ error }}</li>{% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
+            <form action="{{ url_for('admin_bp.sst_admin_calendar') }}" method="post" enctype="multipart/form-data">
+                {% with %}
+                    {% set el_name=form.work_function %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
 
-                <div class="input flex-column align-items-start" style="margin-bottom:90px">
-                    <p class="">Required for function:Get Events from CSV</p>
-                    <p>Select CSV file containing events to be added to the calendar database.</p>
-                    <p>
-                        {{ form.file_name.label }}
-                        {{ form.file_name }}
-                        {% if form.file_name.errors %}
-                            <ul class="errors">
-                                {% for error in form.file_name.errors %}
-                                    <li>{{ error }}</li>{% endfor %}
-                            </ul>
-                        {% endif %}
-                    </p>
-                </div>
+                {% with %}
+                    {% set el_name=form.file_name %}
+                    {% set el_class="input flex-column align-items-start" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
 
-                <div class="input flex-column align-items-start" style="margin-bottom:90px">
-                    <p>Required for function: Print Calendar, Delete Events</p>
-                    <p>Select Audience(s) for events to be processed.</p>
-                    <p class="input" style="margin-top: 25px;margin-bottom: 15px">
-                        {{ form.audiences.label }}
-                        {{ form.audiences }}
-                        {% if form.audiences.errors %}
-                            <ul class="errors">
-                                {% for error in form.audiences.errors %}
-                                    <li>{{ error }}</li>{% endfor %}
-                            </ul>
-                        {% endif %}
-                    </p>
-                </div>
+                {% with %}
+                    {% set el_name=form.audiences %}
+                    {% set el_class="input flex-column align-items-start" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
 
-                <div class="input" style="margin-top: 25px;margin-bottom: 25px">
-                    <p>Required for function: Print Calendar, Delete Events</p>
-                    <p>Select Categories(s) for events to be processed.</p>
-                    {{ form.categories.label }}
-                    {{ form.categories }}
-                    {% if form.categories.errors %}
-                        <ul class="errors">
-                            {% for error in form.categories.errors %}
-                                <li>{{ error }}</li>{% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
+                {% with %}
+                    {% set el_name=form.categories %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
 
-                <div class="input" style="margin-top: 10px;margin-bottom: 10px">
-                    {{ form.start_datetime.label }}
-                    {{ form.start_datetime(placeholder='Page name - not title (e.g., foo-bar-xx)') }}
-                    {% if form.start_datetime.errors %}
-                        <ul class="errors">
-                            {% for error in form.start_datetime.errors %}
-                                <li>{{ error }}</li>{% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
-                <div class="input" style="margin-top: 10px;margin-bottom: 10px">
-                    {{ form.end_datetime.label }}
-                    {{ form.end_datetime() }}
-                    {% if form.end_datetime.errors %}
-                        <ul class="errors">
-                            {% for error in form.end_datetime.errors %}
-                                <li>{{ error }}</li>{% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
-                <div class="file" style="margin-top: 10px;margin-bottom: 10px">
-                    {{ form.save_file_name.label }}
-                    {{ form.save_file_name(placeholder='File name for downloaded file') }}
-                    {% if form.save_file_name.errors %}
-                        <ul class="errors">
-                            {% for error in form.save_file_name.errors %}
-                                <li>{{ error }}</li>{% endfor %}
-                        </ul>
-                    {% endif %}
-                </div>
+                {% with %}
+                    {% set el_name=form.start_datetime %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
+                {% with %}
+                    {% set el_name=form.end_datetime %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
+                {% with %}
+                    {% set el_name=form.save_file_name %}
+                    {% set el_class="file" %}
+                    {% set el_placeholder="File name for downloaded file" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
                 <div class="button">
                     <input id="submit" type="submit" value="Submit">
                 </div>
@@ -104,5 +75,19 @@
                 {{ form.csrf_token }}</form>
 
         </div>
+        <script>
+        $ = jQuery;
+        $('#js1').change(function(){
+            $('.c_csv').parent().hide();
+            $('.c_json').parent().hide();
+            $('.c_pr').parent().hide();
+            $('.c_new').parent().hide();
+{#            $('.jdelete').parent().hide();#}
+{#            $('.jreload').parent().hide();#}
+            let opt = $('#js1 option:selected').val();
+            $('.' + opt).parent().show();
+        });
+        //# sourceURL=calendar.js
+        </script>
     </section>
 {% endblock %}
