--- a/ssfl/templates/admin/json_edit.jinja2
+++ b/ssfl/templates/admin/json_edit.jinja2
@@ -4,7 +4,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
-            <form action="{{ url_for('admin_bp.add_json_template') }}" method="post">
+            <form action="{{ url_for('admin_bp.up_down_load_json_template') }}" method="post">
                 <div class="input">
                     {{ form.json_id.label }}
                     {{ form.json_id(placeholder='0000') }}
