--- a/ssfl/templates/admin/upload.html
+++ b/ssfl/templates/admin/upload.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<title>Python Flask File Upload Example</title>
+<!-- Used by redirect from route upload_file -->
+<title>Python Flask File Upload </title>
 {% include 'base/layout.jinja2' %}
 {% block content %}
     <h2>Select a file to upload</h2>
