Do Main Route cleanup, correct single page handling to use multipage handler with a single cell

--- a/ssfl/templates/main/index_page_layout.jinja2
+++ b/ssfl/templates/main/index_page_layout.jinja2
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+     Route: '/index/<string:page>' => manage_index_pages
+     Template: manage_index_pages.jinja2
+     Form:
+     Processor: index_page_layout.py
+-->
 
 {% extends 'base/layout.html' %}
 
