--- a/ssfl/templates/main/main.jinja2
+++ b/ssfl/templates/main/main.jinja2
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+     Route: '/main/main' => multi_story_page
+     Template: main.jinja2
+     Form:
+     Processor: multi_story_page.py
+-->
 
 {% extends 'base/layout.jinja2' %}
 
